force-app/main/default/objects/ProgramCohort__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Campaign that this Program Cohort belongs to.</description>
    <inlineHelpText>The Campaign that this Program Cohort belongs to.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Program Cohorts</relationshipLabel>
    <relationshipName>ProgramCohorts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>