force-app/main/default/objects/ProgramCohort__c/fields/EndDate__c.field-meta.xml
<!--
  ~ /*
  ~  * Copyright (c) 2020, salesforce.com, inc.
  ~  * All rights reserved.
  ~  * SPDX-License-Identifier: BSD-3-Clause
  ~  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  ~  */
  -->

<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The date the Program Cohort is scheduled to end.</description>
    <inlineHelpText>The date the Program Cohort is scheduled to end.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>