force-app/main/default/objects/ProgramCohort__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Cohorts</relationshipLabel>
    <relationshipName>ProgramCohorts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>