force-app/main/default/objects/ProgramCohort__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>