force-app/main/default/objects/ProgramCohort__c/validationRules/END_DATE_PROGRAM_DATES.validationRule-meta.xml
<!--
  ~ /*
  ~  * Copyright (c) 2020, salesforce.com, inc.
  ~  * All rights reserved.
  ~  * SPDX-License-Identifier: BSD-3-Clause
  ~  * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  ~  */
  -->

<ValidationRule>
    <fullName>END_DATE_PROGRAM_DATES</fullName>
    <active>true</active>
    <description>Ensures End Date is within the Program Start and End Dates</description>
    <errorConditionFormula>OR(
EndDate__c &lt; Program__r.StartDate__c,
EndDate__c &gt; Program__r.EndDate__c
)</errorConditionFormula>
    <errorMessage>End Date must be within the Program Start and End Dates</errorMessage>
</ValidationRule>